# proov

./: .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_NOTICES  agents.md  deny.toml  rust-toolchain.toml  scanner-data-contract.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/ah-scan/: Cargo.toml
crates/ah-scan-engine/: Cargo.toml
crates/ah-scan-engine/src/: lib.rs  plugin.rs  registry.rs
crates/ah-scan-sdk/: Cargo.toml
crates/ah-scan-sdk/src/: guest.rs  lib.rs  types.rs
crates/ah-scan/src/: cli.rs  contract.rs  discovery.rs  lite_mode.rs  main.rs  models.rs  network_evidence.rs  output.rs  payload.rs  plugins.rs  rule_engine.rs  rules.rs  scan.rs  setup.rs  submit.rs  updater.rs  verifier.rs  wasm_bridge.rs  wizard.rs
crates/ah-scan/src/contract/: agents.rs  apps.rs  helpers.rs  mod.rs  prompts.rs
crates/ah-scan/src/detectors/: browser_footprints.rs  containers.rs  content_analysis.rs  cursor_rules.rs  custom_rules.rs  mcp_configs.rs  mod.rs
crates/ah-scan/src/engine/: mod.rs  registry.rs
crates/proov/: Cargo.toml
crates/proov/src/: capabilities.rs  cli.rs  content_patterns.rs  contract_sync.rs  discovery.rs  formatters.rs  identity.rs  lite_mode.rs  main.rs  models.rs  network.rs  output.rs  payload.rs  risk_engine.rs  rule_engine.rs  rules.rs  scan.rs  scan_cache.rs  scan_refresh.rs  setup.rs  source_analysis.rs  source_patterns.rs  submit.rs  updater.rs  wizard.rs
crates/proov/src/contract/: agents.rs  apps.rs  helpers.rs  mcp.rs  mod.rs  prompts.rs  skills.rs  types.rs
crates/proov/src/detectors/: containers.rs  custom_rules.rs  mcp_configs.rs  mod.rs  source_risks.rs
docs/: architecture.md  c4-level1-context.md  c4-level2-container.md  c4-level3-component.md  c4-level4-code.md  cisco-source-analysis-plan.md  custom-rules.md  defenseclaw-scope-decision.md  deployment.md  detectors.md  incremental-scan-design.md  output-spec.md  performance-scan-plan.md  plugin-guide.md  release-verification.md  user-flows.md
examples/detector-cursor-rules/: Cargo.toml  detector_cursor_rules.manifest.json
examples/detector-cursor-rules/src/: lib.rs
examples/detector-template/: Cargo.toml  detector_template.manifest.json
examples/detector-template/src/: lib.rs
examples/rules/: internal-tool.toml  terraform-ai.toml
rules/: agents-md.toml  cursor-rules.toml  prompt-configs-weak.toml  prompt-configs.toml  skills.toml
scripts/: benchmark-scanner.sh  test-scanner.sh  test-submit.sh
src/: capabilities.rs  identity.rs  lite_mode.rs  main.rs  models.rs  scan.rs  wizard.rs
src/detectors/: browser_footprints.rs  prompt_configs.rs
