[workspace]
resolver = "2"
members = [
    "crates/ah-scan",
    "crates/ah-scan-sdk",
]
exclude = [
    "examples/detector-cursor-rules",
    "examples/detector-template",
]

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
