[package]
name = "proov"
version.workspace = true
edition.workspace = true
publish = false
description = "AI Execution Inventory — detect, analyze, and report AI execution artifacts."

[[bin]]
name = "proov"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
toml = "1.1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1"
dirs = "6"
crossterm = "0.29"
hostname = "0.4"
ureq = { version = "2", features = ["json"] }
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
