[package]
name = "detector-cursor-rules"
version = "0.1.0"
edition = "2021"
description = "Example ah-scan WASM detector plugin — detects .cursorrules and agents.md files."

[lib]
crate-type = ["cdylib"]

[dependencies]
ah-scan-sdk = { path = "../../crates/ah-scan-sdk" }
extism-pdk = "1"
serde_json = "1"
